# zilvjiapp

./: build.gradle  screenMatch.properties
app/: build.gradle
app/ali/release/: output.json  zlj_v1.apk
app/huawei/release/: app-huawei-release.apk
app/keystore/: luod.jks
app/other1/release/: output.json
app/qh360/release/: app-qh360-release.apk  output.json
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/res/drawable/: bg_headline_color_gray.xml  bg_mark_text.xml  bt_commont_gray_rec_bg.xml  bt_commont_gray_rec_col_bg.xml  bt_commont_select_bg.xml  bt_commont_stroke_cor_bg.xml  bt_commont_stroke_rec_bg.xml  card_bg_cir.xml  card_bg_gray_cir.xml  card_bg_light_rec.xml  card_bg_rec.xml  ic_launcher_bg.xml  note_count_bg.xml  note_item_bg.xml  rect_bg_33_stork_1.xml  rect_bg_fff_stroke_999_cor_max.xml  rect_bg_fff_tran_50_cor_max.xml  rect_bg_main_cor_max.xml
app/src/main/res/layout/: activity_add_fast_code.xml  activity_card_setting.xml  activity_char.xml  activity_experience.xml  activity_lend_rebt.xml  activity_login.xml  activity_main.xml  activity_main_home.xml  activity_note_detail.xml  activity_note_edite_detail.xml  activity_stock.xml  activity_user_agreement.xml  activity_video_detail.xml  card_png_item.xml  dialog_force_update.xml  dialog_fragment_add_card.xml  dialog_update.xml  error_net_content.xml  error_no_data_content.xml  experience_item.xml  fast_code_item.xml  fragment_home.xml  fragment_input_memo.xml  (+16 more)
gradle/wrapper/: gradle-wrapper.properties
(+246 files in other folders)
