

cmake_minimum_required(VERSION 3.4.1)

file(GLOB bzip bzip/*.c)
add_library( # Sets the name of the library.
        native-lib
        SHARED
        native-lib.cpp
        bspatch.c
        ${bzip})
include_directories(bzip)
find_library( # Sets the name of the path variable.
        log-lib

        log)

target_link_libraries( # Specifies the target library.
        native-lib

        # Links the target library to the log library
        # included in the NDK.
        ${log-lib})